# USh

./: .gitignore  Cargo.toml  README.md
release/linux-x86-64/static/css/: main.css
release/win-x86-64/static/js/: dlqr.js
release/win-x86-64/templates/: 404.html
src/: db.rs  main.rs
static/css/: login.css  main.css
static/js/: init.js  main.js
templates/: 404.html  debug.html  index.html  login.html  reg.html
